Allow setting origin offset
